Updated README and changed Web layout

--- a/Web/Index.html
+++ b/Web/Index.html
@@ -7,7 +7,7 @@
 			<h1> PokeDex 👀 </h1>
 			<div id="app"></div>
 		</main>
-		<button onclick="LoadMore()" id="loadmore">Load More</button>
+		<button onclick="LoadMore()" id="loadmore">Load 50 More</button>
 		<script>
 			var exports = {};
 		</script>
